--- a/carnetdevoyaaaage.html
+++ b/carnetdevoyaaaage.html
@@ -9,6 +9,7 @@
         
         body {
             font-family: 'Arimo', sans-serif;
+            font-family: 'Ahsing';
             margin: 0;
             padding: 0;
             background-color: #001f3f;
