--- a/carnetdevoyaaaage.html
+++ b/carnetdevoyaaaage.html
@@ -71,6 +71,7 @@
     <div class="container">
         <section id="accueil">
             <h2>Explorez le monde à travers ses cultures, ses paysages et sa gastronomie.</h2>
+            <h2>Plongez dans l'univers fascinant des pays à travers des informations détaillées sur leurs lieux emblématiques, leur gastronomie et leurs traditions. Que vous soyez passionné de voyage ou simplement curieux, découvrez les trésors cachés de chaque destination. De la cuisine locale aux sites incontournables, ce carnet de voyage vous accompagne dans une aventure inoubliable autour du monde. </h2> 
         </section>
 
         <section id="destinations">
