--- a/carnetdevoyaaaage.html
+++ b/carnetdevoyaaaage.html
@@ -165,7 +165,7 @@ Festivals Matsuri 🎆 : Fêtes traditionnelles avec processions, spectacles et 
     </div>
 
     <footer>
-        <p>&copy; 2024 Carnet Guide de Voyage. Tous droits réservés.</p>
+        <p>Carnet Guide de Voyage. @Lyna Kerkeni.</p>
     </footer>
 </body>
 </html>
